# vibe-project-lesson

./: .cursorrules  .editorconfig  .gitignore  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROPOSAL.md  README.md  SECURITY.md  cliff.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.agent/: architecture.md  commands.md  context.md  conventions.md
.agent/prompts/: README.md  api-design.md  architecture-decision.md  feature-implement.md  performance-review.md  readme-gen.md  test-generation.md  upgrade-dependency.md
.agent/skills/: refactor.md  test-gen.md
.agent/subagents/: architect.md  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.husky/: commit-msg  pre-commit
.roo/: rules.md
.storybook/: main.ts  manager.ts  preview.ts
examples/python-api/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/python-api/app/: __init__.py  main.py
examples/python-api/app/application/: __init__.py
examples/python-api/app/application/user/: __init__.py  dtos.py  use_cases.py
examples/python-api/app/core/: config.py  database.py
examples/python-api/app/domain/: __init__.py
examples/python-api/app/domain/user/: __init__.py  entity.py  errors.py  repository.py
examples/python-api/app/infrastructure/: __init__.py
examples/python-api/app/infrastructure/database/: __init__.py  models.py  user_repository.py
examples/python-api/app/presentation/: __init__.py
examples/python-api/app/presentation/api/: __init__.py  deps.py  users.py
examples/python-api/app/presentation/schemas/: user.py
examples/python-api/tests/: conftest.py  test_create_user.py  test_user_entity.py
examples/python-api/tests/unit/domain/: test_user_entity.py
scripts/: init-project.sh
src/: vite-env.d.ts
(+151 files in other folders)
